Update:  - create show batch url  - scroll to view on current episode episode list open  - fix scroll index  - use overflow on everything

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -36,17 +36,21 @@
 }
 
 .mainNav {
+  height: 50px;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: $bg-light;
   padding: 5px 0;
   flex-direction: row;
+  position: fixed;
 }
 
 .nav {
   width: 100vw;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 20px;
   img {
     width: 40px;
@@ -143,6 +147,9 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .mainNav {
+    align-items: center;
   }
 }
 @media only screen and (min-width: 768px) {
