--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -3,6 +3,7 @@
 .container {
   width: 100vw;
   min-height: 80vh;
+  padding-bottom: 20px;
 }
 .latest,
 .batch {
@@ -103,6 +104,8 @@
   .latestWrapper {
     display: flex;
     flex-wrap: wrap;
+    height: 100%;
+    overflow: auto;
   }
   .latestItem {
     width: 40vw;
