--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: $bg;
+  min-height: 100% !important;
 }
 
 a {
@@ -15,4 +16,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 0;
 }
